--- a/html/index.html
+++ b/html/index.html
@@ -65,9 +65,9 @@ body {
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/cookie.css">
     <script src="https://kit.fontawesome.com/be27c0ad9d.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/index.js" defer></script>
-    <script src="/assets/js/go.js" defer></script>
-    <script src="/assets/js/proxy-handler.js"></script>
+    <script src="/public/assets/js/index.js" defer></script>
+    <script src="/public/assets/js/go.js" defer></script>
+    <script src="/public/assets/js/proxy-handler.js"></script>
     <title>Shuttle</title>
     <script type='text/javascript' src='//aptdiary.com/45/34/f3/4534f3c01a4be5a6293543f3fb991ae0.js'></script>
   </head>
